--- a/style3.css
+++ b/style3.css
@@ -3,14 +3,14 @@
     width: 170px;
     height: 80px;
     margin-bottom: 10px;
-    border: 2px dotted;
+    border: 2px solid;
 }
 .oren{
     background-color:orangered;
     width: 1285px;
     height: 80px;
     margin-bottom: 10px;
-    border: 2px dotted;
+    border: 2px solid;
 }
 .container1{
     display: flex;
@@ -21,21 +21,21 @@
     width: 170px;
     height: 500px;
     margin-bottom: 10px;
-    border: 2px dotted;
+    border: 2px solid;
 }
 .abu{
     background-color: grey;
     width: 1097px;
     height: 500px;
     margin-bottom: 10px;
-    border: 2px dotted;
+    border: 2px solid;
 }
 .biru{
     background-color:aqua;
     width: 170px;
     height: 500px;
     margin-bottom: 10px;
-    border: 2px dotted;
+    border: 2px solid;
 }  
 .container2{
     display: flex;
@@ -46,6 +46,6 @@
     width: 100%;
     height: 50px;
     margin-bottom: 10px;
-    border: 2px dotted;
+    border: 2px solid;
     }  
 }
